--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-.disclaimer.text {
-    font-size: small;
+.disclaimer {
+    font-family: Helvetica, Arial, sans-serif;
 }
 
-.disclaimer.title {
-    font-weight: bold;
-    font-size: large;
+#disclaimer-body {
+    font-size: small;
+    font-style: italic;
 }
